Re-enable built in CesiumJS viewing controls help. Apply a z-index fix so the app menu buttons do not interfere with it.

--- a/client-source/js/styles.scss
+++ b/client-source/js/styles.scss
@@ -52,3 +52,7 @@ html, body, #cesiumContainer {
 .ag-theme-balham-dark .ag-header {
  background-color: lighten(#1c1f20, 20%);
 }
+
+.cesium-viewer-toolbar {
+    z-index: 1000;
+}
